--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -10,7 +10,7 @@ ko:
     
     label_load_rules: "저장된 규칙로드"
     label_toplines: "%{value}의 상위 라인 참조："
-    label_match_columns: "일치하는 열"
+    label_match_columns: "열 일치 시키기"
     label_match_select: "각 열에서 설정할 필드를 선택하십시오:"
     label_import_rule: "가져오기 규칙"
     label_default_tracker: "기본 추적 프로그램 :"
